@@ -6,25 +6,22 @@ import ru.yandex.practicum.filmorate.exception.NotFoundException;
 import ru.yandex.practicum.filmorate.exception.ValidationException;
 import ru.yandex.practicum.filmorate.model.Film;
 
-import java.util.Collection;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 import java.util.stream.Collectors;
 
 import static java.util.Objects.isNull;
-
 
 @Slf4j
 @Component
 public class InMemoryFilmStorage implements FilmStorage {
     private final Map<Integer, Film> films = new HashMap<>();
-    public static int count = 1;
+    private static int count = 1;
 
     @Override
     public Film addFilm(Film film) {
         film.setId(generateId());
         films.put(film.getId(), film);
+        log.info("Добавлен фильм: {}", film);
         return films.get(film.getId());
     }
 
@@ -35,46 +32,50 @@ public class InMemoryFilmStorage implements FilmStorage {
             throw new NotFoundException("Фильм с id " + film.getId() + " не найден");
         }
         update(film, filmToUpdate);
+        log.info("Обновлён фильм: {}", filmToUpdate);
         return filmToUpdate;
     }
 
     @Override
     public List<Film> getAllFilms() {
-        Collection<Film> listOfFilms = films.values();
-        return listOfFilms.stream().toList();
+        return new ArrayList<>(films.values());
     }
 
     @Override
     public Film getFilm(Integer id) {
-        if (!films.containsKey(id)) {
+        Film film = films.get(id);
+        if (isNull(film)) {
             throw new NotFoundException("Фильм с id " + id + " не найден");
         }
-        return films.get(id);
+        return film;
     }
 
     @Override
     public void deleteFilm(Film film) {
         if (!films.containsKey(film.getId())) {
-            throw new ValidationException("Фильм " + film + " не может быть удален, так как не существует ");
+            throw new ValidationException("Фильм " + film + " не может быть удалён, так как не существует ");
         }
         films.remove(film.getId());
+        log.info("Удалён фильм: {}", film);
     }
 
     @Override
     public List<Integer> getFilmsUserById(Integer userId) {
         return films.values().stream()
-                .filter(film -> film.getLikes() != null && film.getLikes() > 0)
+                .filter(film -> film.getLikes() != null && film.getLikes().contains(userId.longValue()))
                 .map(Film::getId)
                 .collect(Collectors.toList());
     }
-
-
 
     private void update(Film film, Film filmToUpdate) {
         filmToUpdate.setName(film.getName());
         filmToUpdate.setDescription(film.getDescription());
         filmToUpdate.setDuration(film.getDuration());
         filmToUpdate.setReleaseDate(film.getReleaseDate());
+        filmToUpdate.setMpa(film.getMpa());
+        filmToUpdate.setGenres(new LinkedHashSet<>(film.getGenres()));
+        filmToUpdate.setDirectors(new LinkedHashSet<>(film.getDirectors()));
+        // Предполагается, что лайки обрабатываются отдельно через LikeDbStorage
     }
 
     @Override
@@ -83,6 +84,7 @@ public class InMemoryFilmStorage implements FilmStorage {
             throw new ValidationException("Фильм с id " + id + " не существует");
         }
         films.remove(id);
+        log.info("Удалён фильм с id: {}", id);
     }
 
     @Override
@@ -101,21 +103,30 @@ public class InMemoryFilmStorage implements FilmStorage {
                     }
                     return true;
                 })
-                .sorted((f1, f2) -> {
-                    // Сортируем фильмы по количеству лайков (в порядке убывания)
-                    return Integer.compare(f2.getLikes(), f1.getLikes());
-                })
-                .toList();
+                .sorted((f1, f2) -> Integer.compare(
+                        (f2.getLikes() != null) ? f2.getLikes().size() : 0,
+                        (f1.getLikes() != null) ? f1.getLikes().size() : 0))
+                .collect(Collectors.toList());
     }
 
     @Override
-    public List<Film> getSortedDirectorsFilmsByYears(long id) {
-        return List.of();
+    public List<Film> getSortedDirectorsFilmsByYears(long directorId) {
+        return films.values().stream()
+                .filter(film -> film.getDirectors().stream()
+                        .anyMatch(director -> director.getId() == directorId))
+                .sorted(Comparator.comparing(Film::getReleaseDate))
+                .collect(Collectors.toList());
     }
 
     @Override
-    public List<Film> getSortedDirectorsFilmsByLikes(long id) {
-        return List.of();
+    public List<Film> getSortedDirectorsFilmsByLikes(long directorId) {
+        return films.values().stream()
+                .filter(film -> film.getDirectors().stream()
+                        .anyMatch(director -> director.getId() == directorId))
+                .sorted((f1, f2) -> Integer.compare(
+                        (f2.getLikes() != null) ? f2.getLikes().size() : 0,
+                        (f1.getLikes() != null) ? f1.getLikes().size() : 0))
+                .collect(Collectors.toList());
     }
 
     @Override
